--- a/analysis/four_expression_traits_simulations.Rmd
+++ b/analysis/four_expression_traits_simulations.Rmd
@@ -23,6 +23,28 @@ plot_PIP <- function(results_dir, runtag,  simutags, LD_type, ...){
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
+
+plot_PIP_true_parameter <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_PIP_true_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.effects.res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_PIP_true_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.estimated.effects.res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
 plot_PIP_merged <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type,".finemap_merged_regions.res.RDS")
@@ -30,9 +52,30 @@ plot_PIP_merged <- function(results_dir, runtag,  simutags, LD_type, ...){
    return(f1)
 }
 
-plot_PIP_combined_csindex <- function(configtag, runtag,  simutags, LD_type, ...){
+plot_combined_PIP <- function(configtag, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
+   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_combined_PIP_true_parameter <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.res.RDS")
+   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_combined_PIP_true_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.effects.res.RDS")
+   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_combined_PIP_true_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.estimated.effects.res.RDS")
    f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
@@ -58,12 +101,12 @@ param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
 
 ### Number of causal genes detected (GTEX LD)
 ```{r echo=FALSE}
-check_n_detected_multi(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 0.8)
+check_n_detected_multitissues(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 0.8)
 ```
 
 ### Number of causal genes detected (UKBB LD)
 ```{r echo=FALSE}
-check_n_detected_multi(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
+check_n_detected_multitissues(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
 ```
 
 ### Estimated Prior Inclusion Probability and PVE (GTEX LD)
@@ -128,30 +171,20 @@ f1 <- pip_partition_across_tissue(results_dir, runtag, simutags, "UKBBLD", PIP_t
 f1
 ```
 
-### PIP Calibration Plot of expression traits (filter out cs index 0)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
-f2 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
-gridExtra::grid.arrange(f1, f2, ncol =2)
+### PIP Calibration Plot of expression traits - four settings (filter out cs index 0)
+```{r, fig.width= 16, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Default L")
+f2 <- plot_PIP_true_parameter(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Default L")
+f3 <- plot_PIP_true_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter True L")
+f4 <- plot_PIP_true_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Estimated L")
+gridExtra::grid.arrange(f1, f2, f3, f4, ncol = 4)
 ```
 
-### PIP Calibration Plot of expression traits with region merge (filter out cs index 0)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_merged(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
-f2 <- plot_PIP_merged(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
-gridExtra::grid.arrange(f1, f2, ncol =2)
-```
-
-### PIP Calibration Plot of gene level PIP (filter out cs index 0)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_combined_csindex(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
-f2 <- plot_PIP_combined_csindex(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
-gridExtra::grid.arrange(f1, f2, ncol =2)
-```
-
-### PIP Calibration Plot of gene level PIP with region merge (filter out cs index 0)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_combined_csindex(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
-f2 <- plot_PIP_combined_csindex(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
-gridExtra::grid.arrange(f1, f2, ncol =2)
+### PIP Calibration Plot of gene level PIP - four settings (filter out cs index 0)
+```{r, fig.width= 16, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_combined_PIP(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Default L")
+f2 <- plot_combined_PIP_true_parameter(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Default L")
+f3 <- plot_combined_PIP_true_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter True L")
+f4 <- plot_combined_PIP_true_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Estimated L")
+gridExtra::grid.arrange(f1, f2, f3, f4, ncol = 4)
 ```
