--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -64,3 +64,6 @@ Package V2.0
   * LDL - Multi contexts/types [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_multi_context_type.html)
   * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- load predicdb LD](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights.html)
   * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb.html)
+  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_summary.html)
+  
+  
