--- a/analysis/four_expression_traits_simulations.Rmd
+++ b/analysis/four_expression_traits_simulations.Rmd
@@ -33,7 +33,7 @@ plot_PIP_true_parameter <- function(results_dir, runtag,  simutags, LD_type, ...
 
 plot_PIP_true_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.effects.res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.true.effects.res.RDS")
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
@@ -41,6 +41,20 @@ plot_PIP_true_parameter_true_L <- function(results_dir, runtag,  simutags, LD_ty
 plot_PIP_true_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.estimated.effects.res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_PIP_estimated_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.true.effects.res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_PIP_estimated_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.estimated.effects.res.RDS")
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
@@ -68,7 +82,7 @@ plot_combined_PIP_true_parameter <- function(results_dir, runtag,  simutags, LD_
 
 plot_combined_PIP_true_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.effects.res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.true.effects.res.RDS")
    f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
@@ -76,6 +90,20 @@ plot_combined_PIP_true_parameter_true_L <- function(results_dir, runtag,  simuta
 plot_combined_PIP_true_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.estimated.effects.res.RDS")
+   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_combined_PIP_estimated_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.true.effects.res.RDS")
+   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_combined_PIP_estimated_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.estimated.effects.res.RDS")
    f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
@@ -172,19 +200,23 @@ f1
 ```
 
 ### PIP Calibration Plot of expression traits - four settings (filter out cs index 0)
-```{r, fig.width= 16, fig.height= 4, echo=FALSE, warning=FALSE}
+```{r, fig.width= 24, fig.height= 4, echo=FALSE, warning=FALSE}
 f1 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Default L")
 f2 <- plot_PIP_true_parameter(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Default L")
 f3 <- plot_PIP_true_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter True L")
 f4 <- plot_PIP_true_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Estimated L")
-gridExtra::grid.arrange(f1, f2, f3, f4, ncol = 4)
+f5 <- plot_PIP_estimated_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter True L")
+f6 <- plot_PIP_estimated_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Estimated L")
+gridExtra::grid.arrange(f1, f2, f3, f4, f5, f6, ncol = 6)
 ```
 
 ### PIP Calibration Plot of gene level PIP - four settings (filter out cs index 0)
-```{r, fig.width= 16, fig.height= 4, echo=FALSE, warning=FALSE}
+```{r, fig.width= 24, fig.height= 4, echo=FALSE, warning=FALSE}
 f1 <- plot_combined_PIP(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Default L")
 f2 <- plot_combined_PIP_true_parameter(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Default L")
 f3 <- plot_combined_PIP_true_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter True L")
 f4 <- plot_combined_PIP_true_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Estimated L")
-gridExtra::grid.arrange(f1, f2, f3, f4, ncol = 4)
+f5 <- plot_combined_PIP_estimated_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter True L")
+f6 <- plot_combined_PIP_estimated_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Estimated L")
+gridExtra::grid.arrange(f1, f2, f3, f4, f5, f6, ncol = 6)
 ```
