--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,7 +10,9 @@ editor_options:
 
 # Data
 
-  [link](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
+  [GWAS, LD, expr_weights](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
+  
+  [6 modality weights from Munro et al.](https://sq-96.github.io/multigroup_ctwas_analysis/data_6modality_Munro.html)
 
 # LD mismatch diagnosis
 
