--- a/analysis/data_6modality_Munro.Rmd
+++ b/analysis/data_6modality_Munro.Rmd
@@ -2,9 +2,10 @@
 title: "6 modality weights from Munro et al."
 author: "XSun"
 date: "2024-06-05"
-output: workflowr::wflow_html
-editor_options:
-  chunk_output_type: console
+output:
+  workflowr::wflow_html:
+    code_folding: hide
+    toc: true
 ---
 
 ```{r}
